tests/snapshots/run_wpt_conformance__onnx_sigmoid_float32_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sigmoid.https.any.js",
    "sigmoid float32 5D tensor",
    "onnx",
    "PASS",
)
